--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,48 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cont {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  margin: auto;
+  height: 100vh;
+}
+
+.buttons {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  width: 500px;
+  height: 300px;
+  border: none;
+  cursor: pointer;
+}
+
+.container {
+  display: block;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: auto;
+  height: 300px;
+  width: 500px;
 }
 
-.App-link {
-  color: #61dafb;
+.container:hover {
+  box-shadow: 50px 50px 50px 50px #8888;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.span2 {
+  grid-column: span 2;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
+.orange {
+  background-color: #fbb034;
+}
+
+.screen {
+  width: 500px;
+  background-color: grey;
+  height: 100px;
 }
