--- a/src/components/CSSmodules/footer.css
+++ b/src/components/CSSmodules/footer.css
@@ -3,9 +3,17 @@
   font-size: 30px;
 }
 
-.links {
+.contacts {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 15px;
+  font-size: 16px;
+  right: 65px;
+}
+
+.contact {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+  position: relative;
+  right: 65px;
 }
 
 .thesect {
@@ -15,6 +23,9 @@
   padding: 1%;
   flex-wrap: wrap;
   align-items: baseline;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .maker {
